<?xml version="1.0"?>
<package>
  <name>wolf_muvt</name>
  <version>0.0.1</version>
  <description>
        Muvt for WoLF
  </description>
  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>
  <author>Gennaro Raiola</author>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>muvt_ros</run_depend>

</package>
